Support for RHEL 9, Ubuntu 18.04 ans 22.04

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -12,12 +12,14 @@ galaxy_info:
       versions:
         - '7'
         - '8'
+        - '9'
     - name: Debian
       versions:
         - buster
         - bullseye
     - name: Ubuntu
       versions:
+        - bionic
         - focal
         - jammy
 
