--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -13,11 +13,11 @@
 - name: Check system
   ansible.builtin.assert:
     that: ( ansible_os_family == 'RedHat' and
-            ansible_distribution_major_version in ( '7' , '8' ) ) or
+            ansible_distribution_major_version in ( '7' , '8' , '9' ) ) or
           ( ansible_distribution == 'Debian' and
             ansible_distribution_major_version in ( '10' , '11' ) ) or
           ( ansible_distribution == 'Ubuntu' and
-            ansible_distribution_version in ( '18.04' , '20.04' ) )
+            ansible_distribution_version in ( '18.04' , '20.04' , '22.04' ) )
     success_msg: >-
       Ready to install OpenLDAP on {{ ansible_distribution }}
       {{ ansible_distribution_version }}.
