--- a/tasks/group-user-Debian.yml
+++ b/tasks/group-user-Debian.yml
@@ -1,11 +1,11 @@
 ---
 
-- name: "{{ symas_openldap_group }} group"
+- name: Group {{ symas_openldap_group }}
   ansible.builtin.group:
     name: "{{ symas_openldap_group }}"
     system: true
 
-- name: "{{ symas_openldap_user }} user"
+- name: User {{ symas_openldap_user }}
   ansible.builtin.user:
     name: "{{ symas_openldap_user }}"
     group: "{{ symas_openldap_group }}"
