--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -4,6 +4,13 @@
   ansible.builtin.package:
     name: "{{ symas_openldap_packages }}"
     state: present
+  when: ansible_os_family != 'Suse'
+
+- name: OpenLDAP install
+  community.general.zypper:
+    name: "{{ symas_openldap_packages }}"
+    update_cache: true
+  when: ansible_os_family == 'Suse'
 
 - name: Set owner and group on /var/symas subdirectories
   ansible.builtin.file:
