--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -13,17 +13,19 @@
 - name: Check system
   ansible.builtin.assert:
     that: ( ansible_os_family == 'RedHat' and
-            ansible_distribution_major_version in ( '7' , '8' , '9' ) ) or
+            ansible_distribution_major_version in ( '8' , '9' ) ) or
+          ( ansible_os_family == 'Suse' and
+            ansible_distribution_version == '15.6' ) or
           ( ansible_distribution == 'Debian' and
-            ansible_distribution_major_version in ( '10' , '11' ) ) or
+            ansible_distribution_major_version in ( '11' , '12' ) ) or
           ( ansible_distribution == 'Ubuntu' and
-            ansible_distribution_version in ( '18.04' , '20.04' , '22.04' ) )
+            ansible_distribution_version in ( '20.04' , '22.04' , '24.04' ) )
     success_msg: >-
       Ready to install OpenLDAP on {{ ansible_distribution }}
       {{ ansible_distribution_version }}.
     fail_msg: >-
       Your {{ ansible_distribution }} distribution version
-      {{ ansible_distribution_version }} is not supported by this role.
+      {{ ansible_distribution_version }} is not supported by Symas OpenLDAP.
 
 - name: System-specific variables
   ansible.builtin.include_vars: "{{ ansible_os_family }}.yml"
@@ -57,7 +59,7 @@
     dest: /etc/default/symas-openldap
     owner: root
     group: root
-    mode: 0444
+    mode: '444'
 
 - name: Start and enable slapd service
   ansible.builtin.service:
